# pedantic-lawyer

./: .gitignore  .pre-commit-config.yaml  README.md  logging.yaml  prompts.yaml  pyproject.toml  settings.example.yaml  settings.schema.yaml  streamlit_app.py
eval/: __main__.py  metrics.py  test_cases.yaml
examples/: Пример 1 (Неправильно).docx  Пример 1 (Правильно).docx  Пример 2 (Неправильно).docx  Пример 2 (Правильно).docx  Пример 3 (Неправильно).docx  Пример 3 (Правильно).docx  Пример 4 (Неправильно).docx  Пример 4 (Правильно).docx
examples/Нормативные акты/: Закон ЯНАО от 04.06.2024 N 30-ЗАО  О внесении изменений в За.rtf  Закон ЯНАО от 11.06.2024 N 38-ЗАО  Об изменении границ муниц.rtf  Закон ЯНАО от 19.12.2019 N 105-ЗАО  Об установлении на терри.rtf  Закон ЯНАО от 22.12.2023 N 105-ЗАО  О многолетней (вечной) м.rtf  Закон ЯНАО от 22.12.2023 N 111-ЗАО  О государственной поддер.rtf  Закон ЯНАО от 23.04.2021 N 41-ЗАО (ред. от 03.10.2023)  О вн.rtf  Закон ЯНАО от 24.03.2023 N 19-ЗАО  О внесении изменений в За.rtf  Закон ЯНАО от 24.11.2022 N 107-ЗАО  О внесении изменения в З.rtf  Закон ЯНАО от 24.11.2023 N 95-ЗАО  О некоторых вопросах осущ.rtf  Закон ЯНАО от 26.02.2024 N 1-ЗАО  О внесении изменения в ста.rtf  Постановление Администрации МО город Салехард от 06.09.2024 (1).rtf  Постановление Администрации МО город Салехард от 06.09.2024 (2).rtf  Постановление Администрации МО город Салехард от 06.09.2024 (3).rtf  Постановление Администрации МО город Салехард от 06.09.2024.rtf  Постановление Администрации МО город Салехард от 07.10.2022.rtf  (+107 more)
scripts/: from_google_sheets.py  from_google_sheets.yaml
src/: __main__.py  config.py  config_schema.py  logging.yaml  logging_.py  parse_markitdown.py  prepare.py  prompts.yaml
src/ui/: diff.py  (+1 more)
(+3 files in other folders)
