[project]
name = "pedantic-lawyer"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "charset-normalizer>=3.4.1",
    "colorlog>=6.9.0",
    "ftfy>=6.3.1",
    "markitdown-rtf-plugin",
    "markitdown[all]>=0.1.1",
    "mbstrdecoder>=1.1.4",
    "pydantic>=2.11.0",
    "pyyaml>=6.0.2",
    "spire-doc>=13.3.7",
    "striprtf>=0.0.29",
]
